--- a/public/templates/account.html
+++ b/public/templates/account.html
@@ -22,7 +22,7 @@
 <ul class='list-group'>
 	<li class='list-group-item' ng-repeat='book in myBooks'>
 		<strong>{{ book.title | limitTo: 50 }}{{ book.title.length > 50 ? '...' : '' }} </strong>
-		<span>{{ book.author }}</span>
+		<span>{{ book.author | limitTo: 50 }}{{ book.author.length > 50 ? '...(others)' : '' }}</span>
 		<small style='color:green'>{{ book.publishedDate }}</small>
 		<div class='form-group pull-right' >
 			<small ng-click='addBookToList($index,listSelection)' class='pull-left' style='margin-right:5px'>
